# libaxi

./: .gitignore  Makefile.am  configure.ac  libaxi.pc.in
include/: axi.h  definitions.h
src/: Makefile.am  axi.c  deploy.c
