#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([libaxi], [0.1], [ahmed-noman3@outlook.com])

AC_CONFIG_SRCDIR([src/axi.c])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE([foreign -Wall])



AC_CONFIG_FILES([
    Makefile
])

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
